@@ -1,5 +1,15 @@
 2000-12-20  Bruno Haible  <haible@clisp.cons.org>
 
+        * dirkey.d (registry_value_to_object): Make GC safe. Fix possible
+          buffer overrun.
+          (struct root): Add length field.
+          (MKKEY): Store string length as well.
+          (parse_registry_path): Use memcmp instead of strncmp.
+          (DIR-KEY-OPEN): Make GC safe.
+          (MAKE_OBJECT_LIST): Make GC safe.
+
+2000-12-20  Bruno Haible  <haible@clisp.cons.org>
+
         * charstrg.d (nonspacing_table_data): Update to match glibc 2.2 width
           definition.
 
